force-app/main/default/objects/Operating_Expense__c/Operating_Expense__c.object-meta.xml
<CustomObject>
    <description>Related with Building</description>
    <label>Operating Expense</label>
    <nameField>
        <displayFormat>OE-{0000}</displayFormat>
        <label>Operating Expense</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operating Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>