force-app/main/default/objects/Operating_Expense__c/fields/Act_Est__c.field-meta.xml
<CustomField>
    <fullName>Act_Est__c</fullName>
    <label>Act/Est</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Estimate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>