force-app/main/default/objects/Operating_Expense__c/fields/Building_OE__c.field-meta.xml
<CustomField>
    <fullName>Building_OE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building-OE</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Operating Expenses</relationshipLabel>
    <relationshipName>Operating_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>