force-app/main/default/objects/Operating_Expense__c/fields/HVAC__c.field-meta.xml
<CustomField>
    <fullName>HVAC__c</fullName>
    <label>HVAC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>