force-app/main/default/objects/Operating_Expense__c/fields/Janitorial__c.field-meta.xml
<CustomField>
    <fullName>Janitorial__c</fullName>
    <label>Janitorial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>