force-app/main/default/objects/Operating_Expense__c/fields/Management_Office_and_Admin__c.field-meta.xml
<CustomField>
    <fullName>Management_Office_and_Admin__c</fullName>
    <label>Management, Office and Admin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>