force-app/main/default/objects/Operating_Expense__c/fields/Opex__c.field-meta.xml
<CustomField>
    <fullName>Opex__c</fullName>
    <label>Opex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>