force-app/main/default/objects/Operating_Expense__c/fields/RE_Taxes__c.field-meta.xml
<CustomField>
    <fullName>RE_Taxes__c</fullName>
    <label>RE Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>