force-app/main/default/objects/Operating_Expense__c/fields/Roads_and_Grounds__c.field-meta.xml
<CustomField>
    <fullName>Roads_and_Grounds__c</fullName>
    <label>Roads and Grounds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>