force-app/main/default/objects/Operating_Expense__c/fields/Security_and_Life_Safety__c.field-meta.xml
<CustomField>
    <fullName>Security_and_Life_Safety__c</fullName>
    <label>Security and Life Safety</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>