force-app/main/default/objects/Operating_Expense__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>Include date information received, from whom, the company from whom that person works, and on what deal it was requested.</inlineHelpText>
    <label>Source</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>