force-app/main/default/objects/Operating_Expense__c/fields/Total_Opex__c.field-meta.xml
<CustomField>
    <fullName>Total_Opex__c</fullName>
    <formula>Opex__c +  Janitorial__c + Repairs_and_Maintenance__c  +  Security_and_Life_Safety__c +  Insurance__c +
 Utilities__c +  HVAC__c +  Roads_and_Grounds__c +  Management_Office_and_Admin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Opex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>