force-app/main/default/objects/Operating_Expense__c/fields/Total_Opex_and_RE_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Total_Opex_and_RE_Taxes__c</fullName>
    <formula>Total_RE_Taxes__c  + Total_Opex__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Opex and RE Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>