force-app/main/default/objects/Operating_Expense__c/fields/Total_RE_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Total_RE_Taxes__c</fullName>
    <formula>RE_Taxes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total RE Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>