force-app/main/default/objects/Operating_Expense__c/fields/Utilities__c.field-meta.xml
<CustomField>
    <fullName>Utilities__c</fullName>
    <label>Utilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>