force-app/main/default/objects/Operating_Expense__c/validationRules/Opex_Data_Validations.validationRule-meta.xml
<ValidationRule>
    <fullName>Opex_Data_Validations</fullName>
    <active>true</active>
    <errorConditionFormula>( 
NOT(ISBLANK(Opex__c))
&amp;&amp; (
NOT(ISBLANK(Janitorial__c)) || NOT(ISBLANK(Repairs_and_Maintenance__c)) ||
NOT(ISBLANK( Security_and_Life_Safety__c )) || 
NOT(ISBLANK( Insurance__c )) ||
NOT(ISBLANK( Utilities__c )) || 
NOT(ISBLANK( HVAC__c )) ||
NOT(ISBLANK( Roads_and_Grounds__c ))|| 
NOT(ISBLANK( Management_Office_and_Admin__c ))
)
)</errorConditionFormula>
    <errorMessage>We can add the data in either Opex - Breakdown and Opex - No Breakdown sections.</errorMessage>
</ValidationRule>